--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
   <div id="app">
     <div v-text="message">
-sss
+ффф
     </div>
     <input type="text" v-model="message">
     <button type="button" @click="message=''">Нажми</button>
